--- a/app.json
+++ b/app.json
@@ -4,5 +4,13 @@
   "image": "heroku/python",
   "repository": "https://github.com/mikebryant/djshorty-heroku",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ]
+  "addons": [ "heroku-postgresql" ],
+  "buildpacks": [
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-python"
+    },
+    {
+      "url": "https://github.com/clutter/heroku-buildpack-django-migrate"
+    }
+  ]
 }
