Revert "Use migrate on deploy buildpack"
This reverts commit f592810915857ec681b5deb88ab37c142ff0e404.

--- a/app.json
+++ b/app.json
@@ -4,13 +4,5 @@
   "image": "heroku/python",
   "repository": "https://github.com/mikebryant/djshorty-heroku",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
-  "buildpacks": [
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-python"
-    },
-    {
-      "url": "https://github.com/clutter/heroku-buildpack-django-migrate"
-    }
-  ]
+  "addons": [ "heroku-postgresql" ]
 }
